tests/fuzzing_samples/results/case_14.err
Traceback (most recent call last):
  File "/root/es/zclass/pesto/tests/fuzzing_samples/case_14.py", line 14, in <module>
    with box as ctx:
TypeError: 'Box' object does not support the context manager protocol
